--- a/index.html
+++ b/index.html
@@ -375,142 +375,100 @@
         </form>
     </section>
 
-    <section>
-        <div>
-            <div class="title-testimonial">
-                <p>testimonials</p>
-                <h4>What they're saying about us</h4>
+
+    <section class="testimonials">
+        <h4>Testimonials</h4>
+        <h1>What they say about us</h1>
+
+        <div id="caro2">
+            <!-- CARD 1 -->
+            <div class="testimonial-card">
+                <div class="quote-box">
+                    <span class="quote-mark start">“</span>
+                    <p>
+                        Export tempor labore quem cillum quid malis quorum velit fore eram velit sunt aliqua noster
+                        fugiat irure amet legam anim culpa.
+                    </p>
+                    <span class="quote-mark end">”</span>
+                </div>
+                <div class="profile">
+                    <img src="./public/images/testimonials-1.jpg" alt="Sara Wilsson" />
+                    <div class="profile-info">
+                        <h3>Sara Wilsson</h3>
+                        <p>Designer</p>
+                    </div>
+                </div>
             </div>
-            <div class="cards-container">
-                <!-- Card 1 -->
-                <div class="card">
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                    </div>
-                    <div class="card-author">Matt Brandon</div>
+
+            <!-- CARD 2 -->
+            <div class="testimonial-card">
+                <div class="quote-box">
+                    <span class="quote-mark start">“</span>
+                    <p>
+                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid ma noster
+                        fugiat irure amet legam anim culpa.
+                    </p>
+                    <span class="quote-mark end">”</span>
                 </div>
-
-
-
-                <!-- Card 2 -->
-                <div class="card">
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                    </div>
-                    <div class="card-author">Matt Brandon</div>
-                </div>
-                <div class="card">
-                    <div class="card-image">Image Placeholder</div>
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                        <div class="card-author">Matt Brandon</div>
+                <div class="profile">
+                    <img src="./public/images/testimonials-2.jpg" alt="Alex Smith" />
+                    <div class="profile-info">
+                        <h3>Alex Smith</h3>
+                        <p>Developer</p>
                     </div>
                 </div>
-                <div class="card">
-                    <div class="card-image">Image Placeholder</div>
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                        <div class="card-author">Matt Brandon</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">Image Placeholder</div>
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                        <div class="card-author">Matt Brandon</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">Image Placeholder</div>
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                        <div class="card-author">Matt Brandon</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">Image Placeholder</div>
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                        <div class="card-author">Matt Brandon</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">Image Placeholder</div>
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                        <div class="card-author">Matt Brandon</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">Image Placeholder</div>
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                        <div class="card-author">Matt Brandon</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">Image Placeholder</div>
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                        <div class="card-author">Matt Brandon</div>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="card-image">Image Placeholder</div>
-                    <div class="card-content">
-                        <p>Fugiat enim eram quae cillum dolore dolor</p>
-                        <p>amet nulla culpa multos export minim fugiat dolor</p>
-                        <p>enim duis veniam ipsum anim magna sunt elit fore</p>
-                        <p>quem dolore labore illum veniam.</p>
-                        <div class="card-author">Matt Brandon</div>
-                    </div>
-                </div>
-                <div>
-
-                </div>
-
-
-
-
-
-
-
             </div>
+
+            <!-- CARD 3 -->
+            <div class="testimonial-card">
+                <div class="quote-box">
+                    <span class="quote-mark start">“</span>
+                    <p>
+                        Export tempor illum tamen malis malis eram quae irure esse labore quema noster fugiat irure amet
+                        legam anim culpa.
+                    </p>
+                    <span class="quote-mark end">”</span>
+                </div>
+                <div class="profile">
+                    <img src="./public/images/testimonials-3.jpg" alt="Emily Clark" />
+                    <div class="profile-info">
+                        <h3>Emily Clark</h3>
+                        <p>Manager</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- CARD 4 -->
+            <div class="testimonial-card">
+                <div class="quote-box">
+                    <span class="quote-mark start">“</span>
+                    <p>
+                        Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum
+                        velit fore era;elf[ejko fewfh ih pehq gg ]
+                    </p>
+                    <span class="quote-mark end">”</span>
+                </div>
+                <div class="profile">
+                    <img src="./public/images/testimonials-4.jpg" alt="Michael Lee" />
+                    <div class="profile-info">
+                        <h3>Michael Lee</h3>
+                        <p>Photographer</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="carousel-controls">
+            <button id="prevBtn">Prev</button>
+            <button id="nextBtn">Next</button>
+        </div>
     </section>
 
 
 
-
+<section>
+    
+</section>
 
 
 
