--- a/index.html
+++ b/index.html
@@ -464,17 +464,71 @@
         </div>
     </section>
 
+    <br>
+    <!-- gallery -->
+    <section id="gallery">
+        <h1>somme photos our restaurants</h1>
+        <h4>gallery</h4>
+        <div class="imagesgallery">
+            <img class="gallery" width="370px" height="300px" src="./public/images/gallery-5.jpg" alt="">
+            <img width="370px" class="gallery" height="300px" src="./public/images/gallery-2.jpg" alt="">
+            <img width="370px" height="300px" class="gallery" src="./public/images/gallery-3.jpg" alt="">
+            <img width="370px" height="300px" class="gallery" src="./public/images/gallery-3.jpg" alt="">
+            <img width="370px" height="300px" class="gallery" src="./public/images/gallery-5.jpg" alt="">
+            <img width="370px" height="300px" class="gallery" src="./public/images/gallery-6.jpg" alt="">
+            <img width="370px" height="300px" class="gallery" src="./public/images/gallery-7.jpg" alt="">
+            <img width="370px" height="300px" class="gallery" src="./public/images/gallery-3.jpg" alt="">
+        </div>
 
+    </section>
+
+
+
+    <section class="team-section">
+        <div class="team-header">
+            <h3>Team</h3>
+            <h1>Necessitatibus eius consequatur</h1>
+        </div>
+        <div class="chef-grid">
+            <div class="chef-card">
+                <img src="./public/images/chefs-1.jpg" alt="Chef in white hat and red apron" class="chef-image">
+                <div class="chef-info">
+                    <h4>walter white</h4>
+                    <p>Culinary mastermind with expertise in traditional cuisine.</p>
+                    <i class="bi bi-instagram"></i>    <i class="bi bi-linkedin"></i>     <i class="bi bi-twitter"></i>
+                </div>
+            </div>
+            <div class="chef-card">
+                <img src="./public/images/chefs-1.jpg" alt="Pastry chef with cake" class="chef-image">
+                <div class="chef-info">
+                    <h4>walter white</h4>
+                    <p>Creating exquisite desserts with artistic precision.</p>
+                    <i class="bi bi-instagram">    </i><i class="bi bi-linkedin"></i>      <i class="bi bi-twitter"></i>
+                </div>
+            </div>
+            <div class="chef-card">
+                <img src="./public/images/chefs-1.jpg" alt="Chef in white uniform with glasses" class="chef-image">
+                <div class="chef-info">
+                    <h4>walter white</h4>
+                    <p>Innovative culinary techniques with a modern approach.</p>
+                    <i class="bi bi-instagram"></i>     <i class="bi bi-linkedin"></i>         <i class="bi bi-twitter"></i>
+                </div>
+            </div>
+        </div>
+    </section>
 
 <section>
-    
+    <div>   
+        <h3>contact</h3>
+        <h1>contact us</h1>
+    </div>
+    <div class="map">
+        <iframe
+                src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d96779.56628236092!2d-74.006138!3d40.710059!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c25a22a3bda30d%3A0xb89d1fe6bc499443!2sDowntown.%20Conference%20Center!5e0!3m2!1sen!2sus!4v1746746146249!5m2!1sen!2sus"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 </section>
-
-
-
-
-
-
 
 
 
