maps final adjst

--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@
         </div>
     </section>
 
-    <section>
-        <div>
+    <section class="maps">
+        <div class="maps-content">
             <h3>contact</h3>
             <h1>contact us</h1>
         </div>
