--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                     <i class="bi bi-list"></i>
                 </button>
                 <ul class="nav-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
+                    <li><a href="#hero">Home</a></li>
+                    <li><a href="#about">About</a></li>
                     <li><a href="#">Menu</a></li>
                     <li><a href="#">Specials</a></li>
                     <li><a href="#">Events</a></li>
@@ -100,7 +100,7 @@
 
 
     <!-- about section -->
-    <section class="about-bg">
+    <section class="about-bg" link="#about">
         <div class="bloor"></div>
         <div class="about-section">
             <div class="about-content">
@@ -350,9 +350,60 @@
 
 
     <!-- carousel-1 -->
-    <section>
 
+    <section id="gallery">
+        <div id="carousel">
+            <div class="carousel-item slide active">
+                <img src="./public/images/gallery-5.jpg">
+                <div class="content-side">
+                    <h2>Birthday Parties</h2>
+                    <div class="price">$189</div>
+                    <p><em>Lorem ipsum dolor sit amet...</em></p>
+                    <ul class="features">
+                        <li><i class="bi bi-check2-circle"></i>Ullamco laboris...</li>
+                        <li><i class="bi bi-check2-circle"></i>Duis aute irure...</li>
+                        <li><i class="bi bi-check2-circle"></i>Ullamco laboris...</li>
+                        <li><i class="bi bi-check2-circle"></i>Esse cillum dolore...</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="carousel-item slide">
+                <img src="./public/images/gallery-6.jpg">
+                <div class="content-side">
+                    <h2>Private Parties</h2>
+                    <div class="price">$290</div>
+                    <p><em>Lorem ipsum dolor sit amet...</em></p>
+                    <ul class="features">
+                        <li><i class="bi bi-check2-circle"></i>Ullamco laboris...</li>
+                        <li><i class="bi bi-check2-circle"></i>Duis aute irure...</li>
+                        <li><i class="bi bi-check2-circle"></i>Ullamco laboris...</li>
+                        <li><i class="bi bi-check2-circle"></i>Esse cillum dolore...</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="carousel-item slide">
+                <img src="./public/images/gallery-7.jpg">
+                <div class="content-side">
+                    <h2>Custom Parties</h2>
+                    <div class="price">$99</div>
+                    <p><em>Lorem ipsum dolor sit amet...</em></p>
+                    <ul class="features">
+                        <li><i class="bi bi-check2-circle"></i>Ullamco laboris...</li>
+                        <li><i class="bi bi-check2-circle"></i>Duis aute irure...</li>
+                        <li><i class="bi bi-check2-circle"></i>Ullamco laboris...</li>
+                        <li><i class="bi bi-check2-circle"></i>Esse cillum dolore...</li>
+                    </ul>
+                </div>
+            </div>
+
+            <button id="prevBtn" class="nav-btn">⟨</button>
+            <button id="nextBtn" class="nav-btn">⟩</button>
+        </div>
     </section>
+
+
     <!-- carousel-1 -->
 
 
